# RVD

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/db/: connection.rs  mod.rs  schema.rs
src/gui/: app.rs  constants.rs  database.rs  formatters.rs  helpers.rs  mod.rs  robot_view.rs  state.rs  types.rs  views.rs
src/models/: mod.rs  robot.rs  software.rs  vulnerability.rs  vulnerability_csv.rs
src/repositories/: mod.rs  robot_repo.rs  software.rs  software_repo.rs  vulnerability_repo.rs
src/utils/: csv_importer.rs  logger.rs  mod.rs  nvd_api.rs
